# CortexWatcher

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.en.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  SECURITY.en.md  SECURITY.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docker/api/: Dockerfile
docker/bot/: Dockerfile
docker/worker/: Dockerfile
docs/: development_recommendations.md  project_analysis.md
src/cortexwatcher/: __init__.py  config.py  logging.py
src/cortexwatcher/analyzer/: __init__.py  anomalies.py  correlate.py  notifier.py  rules_engine.py
src/cortexwatcher/api/: __init__.py  main.py
src/cortexwatcher/api/routers/: __init__.py  health.py  ingest.py  metrics.py  query.py
src/cortexwatcher/bot/: __init__.py  commands.py  handlers.py  main.py  security.py  validation.py
src/cortexwatcher/db/: __init__.py  models.py  session.py
src/cortexwatcher/db/migrations/: alembic.ini  env.py  seed.py
src/cortexwatcher/parsers/: __init__.py  detect.py  gelf.py  json_lines.py  suricata.py  syslog.py  wazuh.py
src/cortexwatcher/rules/: sample_rules.yaml
src/cortexwatcher/storage/: __init__.py  base.py  clickhouse.py  postgres.py
src/cortexwatcher/workers/: __init__.py  ingestor.py  tasks.py
tests/: conftest.py  test_api.py  test_bot_validation.py  test_clickhouse_storage.py  test_metrics.py  test_parsers.py  test_rate_limiter.py  test_rules_engine.py  test_security.py  test_storage.py  test_storage_clickhouse.py  test_storage_postgres.py  test_workers.py
(+1 files in other folders)
